python/testData/quickFixes/PyAddImportQuickFixTest/typeAliasStatement/main.py
x: <error descr="Unresolved reference 'ExampleType'">ExampleTy<caret>pe</error>
